# Reconocimiento-de-d-gitos-C-

./: CMakeLists.txt  Capa_Entrada.cpp  Derivadas_Funciones_Activacion.cpp  Descenso_Gradiante.cpp  Funciones_activacion.cpp  NeuronalNetwork.cpp  NeuronalNetwork.h  Normalizacion_Capa_Entrada.cpp  Propagacion.cpp  README.md  RedNeuronal.cpp  Resultados.cpp  main.cpp
